# andreani-qr

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/skills/cli-encode/: SKILL.md
.opencode/skills/cli-read/: SKILL.md
.opencode/skills/lib-encode/: SKILL.md
.opencode/skills/lib-read/: SKILL.md
andreani_qr/: __init__.py  config.py  main.py  qr.py
tests/: __init__.py  test_config.py  test_import.py  test_main.py  test_qr.py
